...
          <TimeToFullDisplay record={true} />
          <KeyboardAvoidingView behavior={'padding'} style={styles.container}>
            <ScrollView contentContainerStyle={styles.scrollContent}>
              <TouchableWithoutFeedback onPress={Keyboard.dismiss}>
                <View style={styles.container}>
                  <Button
                    testID="webview-example-button"
                    title="Webview Example"
                    onPress={() => {
                      props.navigation.navigate('Webview');
                    }}
                  />
                  <Separator />
...
