...
          tabBarLabel: 'Playground',
          tabBarIcon: ({ focused, color, size }) => (
            <Ionicons
              name={focused ? 'american-football' : 'american-football-outline'}
              size={size}
              color={color}
              testID="playground-tab-icon"
            />
          ),
        }}
      />
    </BottomTabNavigator.Navigator>
  );
...
